refactor: ajuste nome de rota de usuários para plural
